k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tremligeiro-product
  namespace: tremligeiro
spec:
  selector:
    matchLabels:
      app: tremligeiro-product
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "UPDATE"
      labels:
        app: tremligeiro-product
        environment: "dev"
        version: "1.0.0"
    spec:
      containers:
        - name: tremligeiro-product
          image: tbtec/tremligeiro-product:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 4
            successThreshold: 1
          resources:
            requests:
              memory: "80Mi"
              cpu: "80m"
            limits:
              memory: "400Mi"
              cpu: "200m"
      terminationGracePeriodSeconds: 30
      nodeSelector: {}
      tolerations: []
