k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tremligeiro
  namespace: tremligeiro
  labels:
    app: tremligeiro-product
    environment: "dev"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: "TCP"
  selector:
    app: tremligeiro
